Some reorg and rewriting

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,7 +1,6 @@
 [id="Conversion_hosts"]
-= Conversion hosts
+= Creating and configuring the conversion hosts
 
-include::modules/con_Conversion_host_considerations.adoc[leveloffset=+1]
 include::modules/proc_Creating_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 include::modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
