--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -9,29 +9,25 @@ Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your vi
 
 The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your source and target environments and to create and run a migration plan.
 
-.Migration phases
+The Infrastructure Migration Solution has 3 key phases:
 
-The Infrastructure Migration Solution has 4 key phases:
-
-. xref:Planning_the_migration[Planning]:
+. xref:Planning_the_migration[Planning the migration]
 +
 * Assessing the source and target environments to ensure sufficient resources for migration
 * Formulating strategies to minimize the impact on users
 
-. xref:Preparing_the_migration_environment[Preparation]:
+. xref:Preparing_the_migration_environment[Preparing the environment]
 +
-* Configuring the source and target environments
+* Preparing the VMware source environment
+* Preparing the Red Hat Virtualization or OpenStack Platform target environment
 * Creating and configuring the conversion hosts
 
-. xref:Migrating_the_infrastructure[Migration]:
+. xref:Migrating_the_infrastructure[Migrating the infrastructure]
 +
-* Mapping the resources of the source environment to the target environment
+* Mapping the source infrastructure to the target infrastructure
 * Creating and running a migration plan
-
-. xref:Validating_a_migration_plan[Validation]:
-+
-* Checking that the migration plan completed successfully
 * xref:Troubleshooting[Troubleshooting], if necessary
+* xref:Known_issues[Known issues and mitigations]
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
