--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,9 +1,21 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If errors occur for reasons unrelated to the infrastructure mapping or migration plan (for example, network outage), you can retry the migration plan or re-migrate previously migrated virtual machines. See xref:Retrying_and_remigrating[].
+If your migration plan fails or is only partly successful, you can do the following:
 
-If the cause of the failed migration is not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
+* xref:Retrying_a_failed_migration_plan[Retrying] a migration. If the migration failed for external reasons (for example, network disruption), you can retry the migration plan.
+
+* Check the xref:Logs[logs] for errors:
+** CloudForms
+** virt-v2v
+** virt-v2v-wrapper
+
+* Check for xref:Common_issues_and_mistakes[common mistakes and errors]:
+** xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
+** xref:Migration_plan_errors[Migration plan errors]
+** xref:Virtual_machine_migration_failure[Virtual machine migration failure]
+
+* xref:Known_issues[Known Issues]
 
 include::modules/proc_Retrying_and_remigrating.adoc[leveloffset=+1]
 include::modules/ref_Logs.adoc[leveloffset=+1]
