--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
@@ -3,9 +3,11 @@
 
 Preparing your target environment involves the following key steps:
 
-* Check that the software versions you are installing in the target environment are xref:Software_compatibility_requirements[compatible].
-* Install and configure xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform]
-* Install CloudForms and add your source and target environments as providers
+* Ensuring that the xref:Software_compatibility_requirements[software versions are compatible]
+* Installing and configuring the target environment:
+
+** xref:Preparing_the_rhv_target_environment[Red Hat Virtualization]
+** xref:Preparing_the_osp_target_environment[OpenStack Platform]
 
 include::ref_Software_compatibility_requirements.adoc[leveloffset=+1]
 include::proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
