--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,8 +1,9 @@
 [id="Software_compatibility_requirements"]
-= Software compatibility requirements for the target environment
+= Checking software compatibility in the target environment
 
-Check that the software versions are compatible when setting up your target environment.
+Check that the software versions are compatible before you set up your target environment.
 
+.Software compatability matrix
 [cols="1,2,2", options="header"]
 |===
 |Software |IMS 1.0 |IMS 1.1
