--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,12 +1,11 @@
 [id="Preparing_the_migration_environment"]
-= Preparing for migration
+= Preparing the environment for migration
 
 Preparing the environment for migration involves the following key steps:
 
 * Preparing the xref:Preparing_the_vmware_source_environment[source environment]
 * Preparing the xref:Preparing_the_target_environment[target environment]
-* Configuring the xref:Conversion_hosts[conversion hosts]
+* Creating and configuring the xref:Conversion_hosts[conversion hosts]
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
-
 include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
