--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -35,6 +35,8 @@ If you selected *Import a CSV file with a list of VMs to be migrated*:
 . Click *Next*.
 
 If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[Migration plan errors].
+[[Remigrating_virtual_machines]]
+If you are migrating virtual machines that have been migrated previously, you must add the virtual machines with a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file]. The source virtual machines cannot be re-discovered by the migration plan because they are marked in the CloudForms database as `migrated`.
 
 .<a|*Instance Properties*
 
