--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,15 +1,15 @@
 [[Planning_the_migration]]
 = Planning the migration
 
-During the planning phase, formulate a specific migration goal:
+During the planning phase, you can formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
 
-Example: "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
+To plan your migration, you can check the following:
 
-See the xref:Questions_to_ask_before_migration[planning questions] for guidance in allocating resources.
+* xref:Questions_to_ask_before_migration[Questions to ask before migration], so that you can estimate the resources the migration requires
 
-A xref:Migration_example[migration example] is provided so that you can estimate the time duration of the migration.
+* xref:Migration_example[Migration example] to help estimate the time duration of your migration
 
-xref:Recommendations_for_migration[Recommendations for migration] help you tailor the migration to fit your needs and schedule.
+* xref:Recommendations_for_migration[Recommendations for migration], so that the process fits your needs and schedule
 
 include::modules/ref_Questions_to_ask_before_migration.adoc[leveloffset=+1]
 include::modules/ref_Migration_example.adoc[leveloffset=+1]
