--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -1,12 +1,19 @@
 [id="Creating_conversion_hosts"]
-= Creating conversion hosts
+= Creating the conversion hosts
 
-.Prerequisites
+The prerequisites apply to both Red Hat Virtualization and OpenStack Platform. See xref:Conversion_host_prerequisites[Conversion host prerequisites].
 
-The following prerequisites apply:
+For Red Hat Virtualization, select the conversion hosts in your environment. See xref:Creating_RHV_conversion_hosts[Creating Red Hat Virtualization conversion hosts].
 
-* Deciding how many conversion hosts to create. See xref:Number_of_conversion_hosts[How many conversion hosts to create]
-* Choosing VDDK or SSH transformation for the migration. See xref:datapath_transformation_options_vddk_ssh[Transformation options: VDDK or SSH]
+For OpenStack Platform, download the conversion appliance and create the conversion hosts. See xref:Creating_OSP_conversion_hosts[Creating OpenStack Platform conversion hosts].
+
+[[Conversion_host_prerequisites]]
+== Conversion host prerequisites
+
+Before you create the conversion hosts, ensure that the following prerequisites are met:
+
+* Decide how many conversion hosts to create. See xref:Number_of_conversion_hosts[How many conversion hosts to create]
+* Choose VDDK or SSH transformation for the migration. See xref:datapath_transformation_options_vddk_ssh[Transformation options: VDDK or SSH]
 
 [[Number_of_conversion_hosts]]
 How many conversion hosts to create::
@@ -40,13 +47,15 @@ Choose the transformation option, VDDK or SSH, that is appropriate for your envi
 ** SSH access must be enabled on the source hypervisors
 ** Source and target environments must share SSH keys
 
-.Creating conversion hosts for Red Hat Virtualization
+[[Creating_RHV_conversion_hosts]]
+== Creating Red Hat Virtualization conversion hosts
 
 If you are migrating to Red Hat Virtualization, select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
 
 You can configure the conversion hosts for SSH or VDDK transformation. See xref:Configuring_conversion_hosts_for_transformation[].
 
-.Creating conversion hosts for OpenStack Platform
+[[Creating_OSP_conversion_hosts]]
+== Creating OpenStack Platform conversion hosts
 
 . Download the OpenStack Platform conversion appliance:
 
@@ -79,4 +88,4 @@ The conversion appliance for OpenStack Platform 14 may be used with OpenStack Pl
 .. Enter the *Username*, `cloud-user`.
 .. Click *Choose File*, browse to the SSH key file that you use to create OpenStack Platform instances, and click *Save*.
 
-You can configure the conversion hosts for SSH or VDDK transformation. See xref:Configuring_conversion_hosts_for_transformation[].
+You are ready to configure the conversion hosts for SSH or VDDK transformation. See xref:Configuring_conversion_hosts_for_transformation[].
