--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -1,9 +1,11 @@
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
-Check the xref:Software_compatibility_requirements[software compatibility requirements] before you install the software.
+.Prerequisite
 
-To prepare the Red Hat OpenStack Platform environment for migration:
+Check the software compatibility requirements. See xref:Software_compatibility_requirements[].
+
+.Procedure
 
 . Ensure that the storage backends have sufficient space for the virtual machines you are migrating.
 
