--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
@@ -1,13 +1,13 @@
 [[Logs]]
-= Logs
+= Checking migration logs
 
 You can check the following logs to troubleshoot a failed migration.
 
-.CloudForms
+.CloudForms migration log
 
 `/var/www/miq/vmdb/log/automation.log`. This log contains the steps for orchestrating the virtual machine migrations in CloudForms, in order to troubleshoot migration errors.
 
-.Conversion hosts
+.Conversion host logs
 
 * Red Hat Virtualization: `/var/log/vdsm/import/v2v-import-YYYYMMDDTHHMMSS-1243.log` and `v2v-import-YYYYMMDDTHHMMSS-1243-wrapper.log`
 
@@ -23,7 +23,7 @@ When disk migration starts, two logs are created in the conversion host:
 Both logs are required for bug analysis and must be provided if you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] call.
 ====
 
-.Virtual machine
+.Virtual machine migration log
 
 . In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view.
 . Click menu:Download Log[Migration log] of a virtual machine.
