--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_example.adoc
@@ -1,5 +1,5 @@
 [id="Migration_example"]
-.Migration example
+= Migration example
 
 This migration example, which took 1 hour and 30 minutes to complete, can help you estimate the duration of your migration process:
 
