--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -5,15 +5,13 @@ The following questions can help you to estimate the resources required for migr
 
 What am I migrating?::
 * Identify the hosts and virtual machines to be migrated.
-* If your deployment is large and complex, you may want to divide your resources into migration groups.
+* If your deployment is large and complex, you can divide your resources into migration groups.
 
 What is the maximum number of disks, virtual machines, or NICs that I can migrate?::
 * Although there is no maximum number of disks or virtual machines that you can migrate, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
 * The maximum number of NICs per virtual machine that you can migrate is 4.
 +
 If you exceed the capabilities of the environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
-
-* Perform test migrations to determine the capabilities of your environment.
 
 What operating systems can I migrate?::
 * See link:https://access.redhat.com/articles/1351473[] for a list of supported guest operating systems.
