--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,6 +1,18 @@
 [id="Conversion_hosts"]
 = Creating and configuring the conversion hosts
 
+The migration is performed by software installed on the conversion hosts.
+
+Creating and configuring conversion hosts involves the following key steps:
+
+. Deciding xref:Number_of_conversion_hosts[how many conversion hosts] you need
+. Choosing xref:datapath_transformation_options_vddk_ssh[VDDK or SSH] as the transformation option
+. Creating the xref:Creating_RHV_conversion_hosts[Red Hat Virtualization] or xref:Creating_OSP_conversion_hosts[OpenStack Platform] conversion hosts
+. Configuring the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[VDDK or SSH transformation]
+. Enabling the conversion hosts in xref:Enabling_conversion_hosts_in_cloudforms[CloudForms]
+. Optionally, changing the xref:Configuring_the_maximum_number_of_concurrent_migrations[maximum number of concurrent migrations]
+. Validating the xref:Verifying_conversion_hosts[conversion hosts]
+
 include::modules/proc_Creating_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 include::modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
