--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -3,19 +3,30 @@
 
 If your migration plan fails or is only partly successful, you can do the following:
 
-* xref:Retrying_a_failed_migration_plan[Retrying] a migration. If the migration failed for external reasons (for example, network disruption), you can retry the migration plan.
+* You can retry the migration plan if the failure was caused by external factors. See xref:Retrying_a_failed_migration_plan[].
 
-* Check the xref:Logs[logs] for errors:
-** CloudForms
-** virt-v2v
-** virt-v2v-wrapper
+* Check the logs for errors. See xref:Logs[].
 
-* Check for xref:Common_issues_and_mistakes[common mistakes and errors]:
-** xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
-** xref:Migration_plan_errors[Migration plan errors]
-** xref:Virtual_machine_migration_failure[Virtual machine migration failure]
+* Check the following common issues and mistakes:
+** xref:Infrastructure_mapping_missing_resources[Infrastructure mapping is missing resources]
+** xref:Virtual_machines_cannot_be_discovered[Virtual machines cannot be discovered by the migration plan]
+** xref:Virtual_machines_cannot_be_added_with_CSV_file[Virtual machines cannot be added to the migration plan with a CSV file]
+** xref:Denied_state_error[Migration plan is in a `Denied State`]
+** xref:VM_migration_failure_source_environment[Source environment] has a mounted disk, encrypted disk, or invalid virtual machine name.
 
-* xref:Known_issues[Known Issues]
+** Red Hat Virtualization only:
+*** xref:RHV_infrastructure_mapping_missing_networks[Infrastructure mapping is missing networks]
+*** xref:RHV_infrastructure_mapping_missing_networks_datastore[Infrastructure mapping is missing networks and datastore after host refresh]
+*** xref:RHV_name_conflict[Name conflict]
+*** xref:SSH_transformation_fails[SSH transformation failure]
+
+** OpenStack Platform only:
+*** xref:OpenStack_storage_not_detected[Storage is not detected]
+*** xref:OSP_VM_powered_off[Virtual machine is powered off at migration]
+*** xref:OSP_missing_IP[Missing IP address]
+*** xref:OSP_not_authorized[Authorization error]
+
+* See xref:Known_issues[] for information about obtaining critical updates and for issues that will be addressed in a future release.
 
 include::modules/proc_Retrying_and_remigrating.adoc[leveloffset=+1]
 include::modules/ref_Logs.adoc[leveloffset=+1]
