--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
@@ -3,11 +3,11 @@
 
 Preparing your target environment involves the following key steps:
 
-* Ensuring that the xref:Software_compatibility_requirements[software versions are compatible]
+* Check that the software versions are compatible. See xref:Software_compatibility_requirements[].
 * Installing and configuring the target environment:
 
-** xref:Preparing_the_rhv_target_environment[Red Hat Virtualization]
-** xref:Preparing_the_osp_target_environment[OpenStack Platform]
+** Red Hat Virtualization: xref:Preparing_the_rhv_target_environment[]
+** OpenStack Platform: xref:Preparing_the_osp_target_environment[]
 
 include::ref_Software_compatibility_requirements.adoc[leveloffset=+1]
 include::proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
