--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -1,5 +1,5 @@
 [id="Enabling_conversion_hosts_in_cloudforms"]
-= Enabling conversion hosts in CloudForms
+= Enabling the conversion hosts in CloudForms
 
 OpenStack Platform conversion hosts do not require configuration in CloudForms.
 
