--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Verifying_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Verifying_conversion_hosts.adoc
@@ -1,7 +1,7 @@
 [id='Verifying_conversion_hosts']
-= Verifying conversion hosts
+= Validating the conversion hosts
 
-. To verify your conversion hosts, enter the following URL in your browser:
+. To validate your conversion hosts, enter the following URL in your browser:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
