add name example

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -283,7 +283,7 @@ The following file name example follows `01_miq_overrides.conf` alphabetically i
 
 .Example
 -----
-
+test_miq_overrides.conf
 -----
 
 ==== Reading Configuration Settings
