update with SME feedback

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -269,10 +269,10 @@ This section describes the {product-title} PostgreSQL database configuration. Th
 [width="100%",cols="20%,20%,30%,30%",options="header",]
 |===
 |File|Location|Description|Note
-|`postgresql.conf` |Data Directory(exact location?)|Default server configuration|Adds directive to include `/etc/manageiq/postgresql.conf.d` directory
-|`postgresql.auto.conf` |Data Directory |Contains configuration set by the `ALTER SYSTEM` command|*Do not edit manually*
-|`01_miq_overrides.conf` |`/etc/manageiq/postgresql.conf.d`|Contains miq/cfme default overrides |Overwritten on upgrades
-|<other files>|`/etc/manageiq/postgresql.conf.d`|Contains user overrides |Takes precedence if alphabetical after `01_miq_overrides.conf`
+|`postgresql.conf` |Data Directory |Default server configuration |Adds directive to include `/etc/manageiq/postgresql.conf.d` directory
+|`postgresql.auto.conf` |Data Directory |Contains configuration set by the `ALTER SYSTEM` command |*Do not edit manually*
+|`01_miq_overrides.conf` |`/etc/manageiq/postgresql.conf.d`|Contains {product-title_short} default overrides |Overwritten on upgrades
+|<other files>|`/etc/manageiq/postgresql.conf.d`|Contains user overrides |Takes precedence if alphabetically after `01_miq_overrides.conf`
 |===
 
 ==== User Overrides
