Added a note about the Customize tab behaviour during VM provisioning.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -314,7 +314,9 @@ You can provision virtual machines through various methods. One method is to pro
 
 [IMPORTANT]
 ====
-To provision a virtual machine, you must have the "Automation Engine" role enabled.
+* To provision a virtual machine, you must have the "Automation Engine" role enabled.
+
+* During virtual machine provisioning, the Customize tab is hidden if the template has an unknown Operating System (OS) type.  You will need to set the OS type from the provider or perform SmartState analysis on the template so the OS type is detected.
 ====
 
 To provision a virtual machine from a template:
@@ -323,11 +325,11 @@ To provision a virtual machine from a template:
 . Click image:2007.png[](*Lifecycle*), and then image:1862.png[](*Provision VMs*).
 . Select a template from the list.
 . Click *Continue*.
-. On the *Request* tab, enter information about this provisioning request.
+. On the *Request* tab, enter the request information.
 +
-image:2326.png[]
+image:request-info.png[]
 +
-In *Request Information*, type in at least a *First Name* and *Last Name* and an email address. This email is used to send the requester status emails during the provisioning process for items such as auto-approval, quota, provision complete, retirement, request pending approval, and request denied. The other information is optional. If the {product-title} server is configured to use LDAP, you can use the *Look Up* button to populate the other fields based on the email address.
+In *Request Information*, enter your name and email address. The requester will receive status emails about the provisioning request such as auto-approval, quota, provision complete, retirement, request pending approval, and request denied.
 +
 [NOTE]
 ====
