--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -316,7 +316,7 @@ You can provision virtual machines through various methods. One method is to pro
 ====
 * To provision a virtual machine, you must have the "Automation Engine" role enabled.
 
-* During virtual machine provisioning, the Customize tab is hidden if the template has an unknown Operating System (OS) type. In that case, to make Customize tab available in the user interface, you will need to set the OS type from the provider or perform SmartState analysis on the template so the OS type is detected.
+* During virtual machine provisioning, the Customize tab is hidden if the template has an unknown Operating System (OS) type. To make the Customize tab visible in the user interface, you will need to set the OS type from the provider or perform SmartState analysis on the template so the OS type is detected.
 ====
 
 To provision a virtual machine from a template:
