--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
@@ -1,27 +1,27 @@
 [id="Vmware_to_osp_workflow"]
 = VMware to Red Hat OpenStack Platform migration workflow
 
-This workflow describes the process of migrating from VMware to Red Hat OpenStack Platform.
+This workflow describes the process of migrating from VMware to Red Hat OpenStack Platform after you have created the infrastructure mapping and the migration plan.
 
 image:vmware_to_osp_migration_workflow.png[]
 
-. After creating an infrastructure mapping and a migration plan, you run the migration plan.
+image:circle_step_numbers/1.png[25,25] You run the migration plan.
 
-. CloudForms uses the migration plan to locate the virtual machines to be migrated.
-+
+image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the virtual machines to be migrated.
+
 [NOTE]
 ====
 Source virtual machines must be powered on for migration.
 ====
 
-. If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
+image:circle_step_numbers/3.png[25,25] If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
 
-. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
+image:circle_step_numbers/4.png[25,25] Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
-. The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper` and streams the disks to be converted to the target block storage with `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
+image:circle_step_numbers/5.png[25,25] The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper` and streams the disks to be converted to the target block storage with `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
 
-. After the disks are converted, `virt-v2v` detaches the volumes from the conversion host. `virt-v2v-wrapper` creates the target instance in the OpenStack Platform environment with the converted disks, using the flavor and security group defined in the migration plan and the network(s) defined in the infrastructure mapping.
+image:circle_step_numbers/6.png[25,25] After the disks are converted, `virt-v2v` detaches the volumes from the conversion host. `virt-v2v-wrapper` creates the target instance in the OpenStack Platform environment with the converted disks, using the flavor and security group defined in the migration plan and the network(s) defined in the infrastructure mapping.
 
-. The disks mapped in the block storage are attached to the instance and the instance is powered on.
-+
+image:circle_step_numbers/7.png[25,25] The disks mapped in the block storage are attached to the instance and the instance is powered on.
+
 The migration process is complete and the migration plan's status is displayed in CloudForms.
