--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -1,22 +1,22 @@
 [id="Vmware_to_rhv_workflow"]
 = VMware to Red Hat Virtualization migration workflow
 
-This workflow describes the process of migrating from VMware to Red Hat Virtualization.
+This workflow describes the process of migrating from VMware to Red Hat Virtualization after you have created the infrastructure mapping and the migration plan.
 
 image:vmware_to_rhv_migration_workflow.png[]
 
-. After creating an infrastructure mapping and a migration plan, you run the migration plan.
+image:circle_step_numbers/1.png[25,25] You run the migration plan.
 
-. CloudForms uses the migration plan to locate the virtual machines to be migrated.
+image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the virtual machines to be migrated.
 
-. If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
+image:circle_step_numbers/3.png[25,25] If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
 
-. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
+image:circle_step_numbers/4.png[25,25] Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
-. The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain with `virt-v2v`, and converts the disks.
+image:circle_step_numbers/5.png[25,25] The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain with `virt-v2v`, and converts the disks.
 
-. The target virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
+image:circle_step_numbers/6.png[25,25] The target virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
 
-. The converted disks are attached to the target virtual machine. The target virtual machine's power state is identical to its pre-migration state.
-+
+image:circle_step_numbers/7.png[25,25] The converted disks are attached to the target virtual machine. The target virtual machine's power state is identical to its pre-migration state.
+
 The migration process is complete and the migration plan's status is displayed in CloudForms.
