--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -3,7 +3,7 @@
 
 After creating high availability for the database tier and the user interface tier, the rest of the infrastructure should be sized appropriately for the roles and the environments that they manage. These roles and tiers use built-in high availability mechanisms like primary, secondary, and tertiary failover.
 
-You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[], and then assign zones and server roles. The {product-title_short} appliances and roles can be configured in any order.
+You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[], and then assign zones and server roles. The non-database {product-title_short} appliances and roles can be configured in any order.
 
 /////
 .Considerations
