--- a/doc-High_Availability_Guide/topics/Overview.adoc
+++ b/doc-High_Availability_Guide/topics/Overview.adoc
@@ -6,7 +6,7 @@ This guide describes how to configure and manage database high availability in a
 This guide describes two types of appliances used in high availability: 
 
 * _Database-only {product-title_short} appliances_, which do not have `evmserverd` processes enabled or a user interface.
-* _{product-title_short} appliances_, which are standard appliances containing a user interface and which have `evmserverd` processes enabled.
+* _Non-database {product-title_short} appliances_, which are standard appliances containing a user interface and which have `evmserverd` processes enabled.
 
 ifdef::cfme[]
 Unlike the high availability method in older versions of CloudForms which uses `pacemaker`, the built-in database high availability in CloudForms 4.2 and newer is achieved by `repmgr` database replication with PostgreSQL.
@@ -17,7 +17,7 @@ Unlike the high availability method in older versions of ManageIQ which uses pac
 endif::miq[]
 
 
-In this configuration, a failover monitor daemon is configured and running on each {product-title_short} (non-database) appliance. The failover monitor watches the `repmgr` metadata about the database-only appliances present in the cluster. When the primary database-only appliance goes down, the {product-title_short} appliances start polling each of the configured standby database-only appliances to monitor which one comes up as the new primary. The promotion is orchestrated either by `repmgrd` on the database-only appliances or is done manually. When the {product-title_short} appliances find that a standby has been promoted, {product-title_short} reconfigures the setup by writing the new IP address in the `database.yml` file to point to the new primary. 
+In this configuration, a failover monitor daemon is configured and running on each non-database {product-title_short} appliance. The failover monitor watches the `repmgr` metadata about the database-only appliances present in the cluster. When the primary database-only appliance goes down, the non-database {product-title_short} appliances start polling each of the configured standby database-only appliances to monitor which one comes up as the new primary. The promotion is orchestrated either by `repmgrd` on the database-only appliances or is done manually. When the non-database {product-title_short} appliances find that a standby has been promoted, {product-title_short} reconfigures the setup by writing the new IP address in the `database.yml` file to point to the new primary. 
 
 [NOTE]
 ====
@@ -33,7 +33,7 @@ For a high availability {product-title} environment, you need a virtualization h
 
 - One virtual machine for the primary external database containing a minimum of 4GB dedicated disk space
 - One virtual machine for the standby external database containing a minimum of 4GB dedicated disk space
-- Two virtual machines for the {product-title_short} appliances
+- Two virtual machines for the non-database {product-title_short} appliances
 
 ifdef::cfme[]
 See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_ for information on setting up the correct disk space for the database-only appliances.
