--- a/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
+++ b/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
@@ -17,7 +17,7 @@ Local Database Server:   running (primary)
 ...
 ----
 +
-. On the {product-title_short} (non-database) appliances, stop the failover monitor: 
+. On the non-database {product-title_short} appliances, stop the failover monitor: 
 .. In the appliance console menu, select *Configure Application Database Failover Monitor*. 
 .. Select *Stop Database Failover Monitor*.
 . On the _standby_ database-only appliances, stop the `postgresql` database service:
@@ -26,7 +26,7 @@ Local Database Server:   running (primary)
 # systemctl stop rh-postgresql95-postgresql
 ----
 +
-. Stop `evmserverd` on each {product-title_short} (non-database) appliance:
+. Stop `evmserverd` on each non-database {product-title_short} appliance:
 +
 ----
 # systemctl stop evmserverd
@@ -37,7 +37,7 @@ Local Database Server:   running (primary)
 
 Run the following steps on your primary database-only appliance:
 
-. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
+. In the appliance console menu, configure the new hostname or IP address from the *Configure Network* option.
 . Restart the appliance.
 . Update the `host` key to the primary database appliance's new hostname in `/var/www/miq/vmdb/config/database.yml`.
 
@@ -46,7 +46,7 @@ Run the following steps on your primary database-only appliance:
 
 Run the following steps on your standby database-only appliances:
 
-. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
+. In the appliance console menu, configure the new hostname or IP address from the *Configure Network* option.
 . Restart the appliance.
 . Update the `host` key to the standby database appliance's new hostname in `/var/www/miq/vmdb/config/database.yml`.
 
@@ -78,7 +78,7 @@ On the primary database-only appliance, initialize the nodes in the database clu
 +
 [NOTE]
 ====
-The hostname or IP address must be visible to all appliances that communicate with this database, including the {product-title_short} appliances and any global region databases.
+The hostname or IP address must be visible to all appliances that communicate with this database, including the non-database {product-title_short} appliances and any global region databases.
 ====
 +
 .. Confirm that the replication server configuration details are correct, and select `y` to apply the configuration.
@@ -121,7 +121,7 @@ If you are using non-dedicated database appliances, also stop `evmserverd` on th
 
 ==== Restarting Services
 
-. Start `evmserverd` on each {product-title_short} (non-database) appliance:
+. Start `evmserverd` on each non-database {product-title_short} appliance:
 +
 ----
 # systemctl start evmserverd
@@ -129,7 +129,7 @@ If you are using non-dedicated database appliances, also stop `evmserverd` on th
 +
 After `evmserverd` has started successfully, all appliances will be able connect to the database.
 +
-. Restart the failover monitor on the {product-title_short} (non-database) appliances: 
+. Restart the failover monitor on the non-database {product-title_short} appliances: 
 .. In the appliance console menu, select *Configure Application Database Failover Monitor*. 
 .. Select *Start Database Failover Monitor*.
 
