edits from peer review- one edit to specify appliance console menu; edits throughout to rename CF appliances as non-database CF appliances to correct weird grammar and clarify the terminology

--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -1,12 +1,12 @@
 [[installation]]
 == Installing the Appliances
 
-This chapter outlines the steps for installing and configuring the {product-title} components needed for high availability: a database cluster comprised of primary and standby database-only appliances, and two (at minimum) {product-title_short} appliances.
+This chapter outlines the steps for installing and configuring the {product-title} components needed for high availability: a database cluster comprised of primary and standby database-only appliances, and two (at minimum) non-database {product-title_short} appliances.
 
 [[installation_primary_db]]
 === Installing the Primary Database-Only Appliance
 
-The primary database-only appliance functions as an external database to the {product-title_short} appliances.
+The primary database-only appliance functions as an external database to the non-database {product-title_short} appliances.
 
 . Deploy a {product-title_short} appliance with an extra (and unpartitioned) disk for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
 . Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
@@ -113,7 +113,7 @@ On the primary database-only appliance, initialize the nodes in the database clu
 +
 [NOTE]
 ====
-The hostname must be visible to all appliances that communicate with this database, including the {product-title_short} appliances and any global region databases.
+The hostname must be visible to all appliances that communicate with this database, including the non-database {product-title_short} appliances and any global region databases.
 ====
 +
 .. Confirm that the replication server configuration details are correct, and select `y` to apply the configuration.
